fix: macro menu scancode dropdown panel visibility (#1950)
* fix: macro menu scancode dropdown panel visibility

* fix: animation and new add new macro item case

--- a/packages/uhk-web/src/app/components/macro/list/macro-list.component.scss
+++ b/packages/uhk-web/src/app/components/macro/list/macro-list.component.scss
@@ -43,10 +43,6 @@ h1 {
     }
 }
 
-.list-group {
-    overflow: auto;
-}
-
 .macro__name {
     border-bottom: 2px dotted #999;
     padding: 0 0.5rem;
@@ -165,8 +161,4 @@ macro-item {
     &.active {
         border-color: var(--color-active-monaco-editor-border-color);
     }
-}
-
-.new-macro-item {
-    overflow: hidden;
 }
